Alphabetize find_package()s and add pasta to list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,12 +16,13 @@ include(CMakeDependentOption)
 include(GNUInstallDirs)
 include("cmake/options.cmake")
 
-find_package(Z3 CONFIG REQUIRED)
-find_package(LLVM CONFIG REQUIRED)
 find_package(Clang CONFIG REQUIRED)
 find_package(gap CONFIG REQUIRED)
-find_package(VAST CONFIG REQUIRED)
+find_package(LLVM CONFIG REQUIRED)
 find_package(MLIR CONFIG REQUIRED)
+find_package(PASTA CONFIG REQUIRED)
+find_package(VAST CONFIG REQUIRED)
+find_package(Z3 CONFIG REQUIRED)
 
 add_subdirectory("lib")
 add_subdirectory("bin")
