Remove TODO, add lib and bin sub dirs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,15 +19,9 @@ include("cmake/options.cmake")
 find_package(Clang CONFIG REQUIRED)
 find_package(LLVM CONFIG REQUIRED)
 find_package(MLIR CONFIG REQUIRED)
-
-# TODO(bpp): Add MACRONI_ENABLE_{VAST,PASTA}_SUBMODULE options to let users
-# build Macroni using their own versions of PASTA and VAST
-# find_package(pasta CONFIG REQUIRED)
-# find_package(VAST CONFIG REQUIRED)
-
 find_package(Z3 CONFIG REQUIRED)
+# NOTE: We don't do find_package(VAST/pasta/gap) since the are submodules
 
+add_subdirectory(lib)
+add_subdirectory(bin)
 add_subdirectory(external)
-
-add_subdirectory("lib")
-# add_subdirectory("bin")
