Remove most target link libs from lb CMakeLists

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -6,116 +6,14 @@
 # the LICENSE file found in the root directory of this source tree.
 #
 
-set(PROJECT_NAME "macroni")
+add_subdirectory(macroni)
 
-set(source_include_dir "${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME}")
+add_library( macroni_api INTERFACE )
 
-# https://github.com/JonathanSalwan/Triton/issues/1082#issuecomment-1030826696
-if(LLVM_LINK_LLVM_DYLIB)
-  set(llvm_libs LLVM)
-else()
-  llvm_map_components_to_libnames(llvm_libs
-    support core
-    irreader
-    bitreader bitwriter
-    passes asmprinter
-    aarch64desc aarch64codegen aarch64asmparser
-    armdesc armcodegen armasmparser
-    interpreter mcjit
-    nvptxdesc nvptxcodegen
-    x86desc x86codegen x86asmparser
-    sparcdesc sparccodegen sparcasmparser
-    webassemblydesc webassemblycodegen webassemblyasmparser)
-endif()
-
-
-add_library("${PROJECT_NAME}" STATIC
-  
+target_link_libraries( macroni_api
+    INTERFACE
+        macroni_translation_api
+        macroni_settings
 )
 
-get_property(DIALECT_LIBS GLOBAL PROPERTY MLIR_DIALECT_LIBS)
-get_property(CONVERSION_LIBS GLOBAL PROPERTY MLIR_CONVERSION_LIBS)
-
-target_link_libraries("${PROJECT_NAME}"
-  PUBLIC
-    ${DIALECT_LIBS}
-    ${CONVERSION_LIBS}
-    MLIRAffineAnalysis
-    MLIRAffineDialect
-    MLIRAffineTransformOps
-    MLIRAffineTransforms
-    MLIRAffineUtils
-    MLIRAMDGPUDialect
-    MLIRAsyncDialect
-    MLIRBufferizationTransformOps
-    MLIRCore
-    MLIRDialect
-    MLIREmitCDialect
-    MLIRExecutionEngine
-    MLIRGPUOps
-    MLIRGPUTransformOps
-    MLIRGPUTransforms
-    MLIRHighLevel
-    MLIRHighLevelTransforms
-    MLIRIR
-    MLIRLinalgTransformOps
-    MLIRLLVMCommonConversion
-    MLIRLLVMIRTransforms
-    MLIRLLVMToLLVMIRTranslation
-    MLIRLowLevel
-    MLIRMemRefDialect
-    MLIRMemRefTransformOps
-    MLIRMemRefTransforms
-    MLIRMemRefUtils
-    MLIRMeta
-    MLIRMLProgramDialect
-    MLIRNVGPUDialect
-    MLIROpenACCDialect
-    MLIROpenMPDialect
-    MLIROptLib
-    MLIRParser
-    MLIRPass
-    MLIRROCDLDialect
-    MLIRSCFTransformOps
-    MLIRShapeDialect
-    MLIRShapeOpsTransforms
-    MLIRSparseTensorTransforms
-    MLIRSPIRVDialect
-    MLIRSupport
-    MLIRTargetLLVMIRExport
-    MLIRTensorInferTypeOpInterfaceImpl
-    MLIRToLLVMIRTranslationRegistration
-    MLIRTosaDialect
-    MLIRTransforms
-    MLIRTransformUtils
-    MLIRVectorDialect
-    MLIRVectorTransformOps
-    MLIRVectorTransforms
-    MLIRVectorUtils
-    
-    ${llvm_libs}
-    
-    clang
-    clangAnalysis
-    clangAST
-    clangBasic
-    clangDriver
-    clangEdit
-    clangFrontend
-    clangIndex
-    clangLex
-    clangParse
-    clangSerialization
-    clangTooling
-)
-
-target_include_directories("${PROJECT_NAME}"
-  PUBLIC
-    $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
-)
-
-target_compile_features("${PROJECT_NAME}"
-  PRIVATE
-    cxx_std_20
-)
+add_library(macroni::api ALIAS macroni_api)
