--- a/include/macroni/CMakeLists.txt
+++ b/include/macroni/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(Dialect)
+add_subdirectory(Conversion)
 add_subdirectory(Translation)
 
 configure_file(Version.hpp.in Version.hpp @ONLY)
