--- a/lib/macroni/CMakeLists.txt
+++ b/lib/macroni/CMakeLists.txt
@@ -1,4 +1,5 @@
 # Copyright (c) 2023-present, Trail of Bits, Inc.
 
 add_subdirectory(Dialect)
+add_subdirectory(Conversion)
 add_subdirectory(Translation)
