Lower address space attribute to kernel type
- Convert address space attribute to kernel type `AddressSpaceType`.
- Remove global AST variable - instead, access the AST through the code
  gen visitor's meta generator.
- Update macronify CMakeLists.txt to link against `KernelTypes.cpp`.

--- a/lib/macroni/Dialect/Kernel/CMakeLists.txt
+++ b/lib/macroni/Dialect/Kernel/CMakeLists.txt
@@ -3,6 +3,7 @@
 add_mlir_dialect_library(MLIRKernel
     KernelDialect.cpp
     KernelOps.cpp
+    KernelTypes.cpp
 
     ADDITIONAL_HEADER_DIRS
         ${PROJECT_SOURCE_DIR}/include/macroni
