--- a/lib/macroni/Conversion/CMakeLists.txt
+++ b/lib/macroni/Conversion/CMakeLists.txt
@@ -1,20 +1,2 @@
-add_library(macroni_conversion
-    MacroniRewriters.cpp
-)
-
-target_link_libraries(macroni_conversion
-  PRIVATE
-    MLIRLowLevel
-    MLIRHighLevel
-    MLIRIR
-    MLIRPass
-    MLIRTransformUtils
-    MLIRExecutionEngine
-    MLIRLLVMCommonConversion
-    MLIRTargetLLVMIRExport
-    MLIRLLVMToLLVMIRTranslation
-    MLIRToLLVMIRTranslationRegistration
-
-    macroni::settings
-)
-add_library(macroni::conversion ALIAS macroni_conversion)
+add_subdirectory(Kernel)
+add_subdirectory(Safety)
