--- a/lib/macroni/Dialect/CMakeLists.txt
+++ b/lib/macroni/Dialect/CMakeLists.txt
@@ -1,4 +1,5 @@
 # Copyright (c) 2023-present, Trail of Bits, Inc.
 
-add_subdirectory(Macroni)
 add_subdirectory(Kernel)
+add_subdirectory(Macroni)
+add_subdirectory(Safety)
